Fix LP & Synth icon alignment issues
- added 'px' to the style props for left,bottom,right etc

closes #832

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -116,26 +116,26 @@ a {
 
 .token-badge {
   position: absolute;
-  left: 31;
-  bottom: 2;
+  left: 31px;
+  bottom: 2px;
 }
 
 .token-badge-tight {
   position: absolute;
-  left: 21;
-  top: 19;
+  left: 21px;
+  top: 19px;
 }
 
 .token-badge-tighter {
   position: absolute;
-  left: 12;
-  top: 12;
+  left: 12px;
+  top: 12px;
 }
 
 .token-badge-share {
   position: absolute;
-  left: 40;
-  top: 29;
+  left: 40px;
+  top: 29px;
 }
 
 .iconSeparator {
